# mir_robot_simulation

./: LICENSE  README.md  ros2.repos  time_synchronization_MIR250.sh
dual_laser_merger-humble/: CMakeLists.txt  package.xml
dual_laser_merger-humble/launch/: demo_laser_merger.launch.py
dual_laser_merger-humble/src/: dual_laser_merger.cpp
graph_based_navigation_system/: navigation_graph.yaml  package.xml  setup.cfg  setup.py
graph_based_navigation_system/config/: mir_nav_params.yaml  navigation_graph.yaml  navigation_graph_2.yaml
graph_based_navigation_system/graph_based_navigation_system/: graph_editor.py  graph_nav_controller.py  nav2_dynamic_reconfig.py  render_graph_on_map.py
graph_based_navigation_system/launch/: graph_nav_controller_launch.py  graph_navigation_launch.py
graph_based_navigation_system/launch/include/: amcl.py  navigation.py
graph_based_navigation_system/maps/: test_TER_1.pgm  test_TER_1.yaml
manual_navigation/: setup.py
manual_navigation/manual_navigation/: cloud_transformation.py
mir_actions/: package.xml
mir_description/config/: diffdrive_controller.yaml  joint_state_controller.yaml  joistick.yaml  twist_mux.yaml
mir_description/launch/: mir_250_launch.py  mir_display_launch.py
mir_description/meshes/visual/: D435_Solid.stl
mir_description/rviz/: mir_manual_control.rviz
mir_description/urdf/: mir.urdf.xacro
mir_description/urdf/include/: camera_d435.urdf.xacro  caster.urdf.xacro  mir_250_v1.urdf.xacro  sick_s300.urdf.xacro
mir_driver/: package.xml  setup.py
mir_driver/config/: twist_mux.yaml
mir_driver/launch/: additions_launch.py  manual_control_launch.py  mir_headless_launch.py  mir_launch.py
mir_driver/mir_driver/: mir_bridge.py  rosbridge.py  tf_remove_child_frames.py  tf_static_publisher.py  tf_static_republisher.py
mir_manual_navigation/: package.xml  setup.cfg  setup.py
mir_manual_navigation/config/: joy_config.yaml  joy_init.yaml  twist_mux.yaml
mir_manual_navigation/launch/: manual_control_launch.py
mir_manual_navigation/mir_manual_navigation/: cloud_transformation.py  encoder_to_joint_state.py  initial_position.py  mir_controller_restapi.py  pause_mode_setup.sh  tf_static_publisher.py
mir_msgs/msg/: RobotMode.msg
mir_navigation/: package.xml
mir_navigation/config/: mir_mapping_async.yaml  mir_nav_params.yaml
mir_navigation/launch/: mir_mapping_launch.py  mir_nav_launch.py
mir_navigation/launch/include/: amcl.py  mapping.py  navigation.py
mir_navigation/maps/: test_TER_1.yaml
mir_navigation/rviz/: mir_mapping_manual.rviz  mir_nav.rviz
mir_restapi/: package.xml  setup.py
mir_restapi/mir_restapi/: mir_controller_restapi.py  mir_restapi_lib.py  mir_restapi_pause.py  mir_restapi_server.py  mir_restapi_sync_time.py
sdc21x0/: package.xml
sensors_launcher_mir_250/: CMakeLists.txt  package.xml
sensors_launcher_mir_250/launch/: sensors_launcher.launch.py
sensors_launcher_mir_250/src/: camera_left_changer.cpp  camera_right_changer.cpp  dual_laser_merger.cpp
src/: README.md  ros2.repos
src/dual_laser_merger-humble/include/dual_laser_merger/: dual_laser_merger.hpp
src/dual_laser_merger-humble/launch/: demo_laser_merger.launch.py
src/dual_laser_merger-humble/src/: dual_laser_merger.cpp
src/laser_scan_merger/launch/: laser_scan_merger.launch  laser_scan_merger_launch.py
src/laser_scan_merger/src/: scans_merger.cpp
src/manual_navigation/: package.xml  setup.py
src/manual_navigation/launch/: manual_control_launch.py
src/manual_navigation/manual_navigation/: cloud_transformation.py  encoder_to_joint_state.py  manual_mode.py
src/mir_description/: package.xml
src/mir_description/config/: diffdrive_controller.yaml
src/mir_description/launch/: mir_250_launch.py  mir_display_launch.py
src/mir_description/rviz/: mir_visu_full.rviz
src/mir_description/urdf/: mir.urdf.xacro
src/mir_description/urdf/include/: caster.urdf.xacro  mir_250_v1.urdf.xacro  wheel.urdf.xacro
src/mir_driver/: package.xml  setup.py
src/mir_driver/launch/: additions_launch.py  mir_headless_launch.py
src/mir_driver/mir_driver/: mir_bridge.py  rosbridge.py
src/mir_navigation/: CMakeLists.txt  package.xml
src/mir_navigation/config/: mir_mapping_async.yaml  mir_nav_params.yaml
src/mir_navigation/launch/include/: amcl.py  mapping.py  navigation.py
src/mir_navigation/rviz/: mir_visu.rviz
src/mir_restapi/mir_restapi/: mir_restapi_lib.py  mir_restapi_server.py
