<?xml version="1.0"?>
<package format="3">
  <name>mir_manual_navigation</name>
  <version>0.0.0</version>
  <description>Package for MIR manual navigation of the robot</description>
  <maintainer email="gianluca.galvagni@edu.unige.it">Gianluca Galvagni</maintainer>
  <author email="gianluca.galvagni@edu.unige.it">Gianluca Galvagni</author>

  <license>Apache-2.0</license>

  <depend>mir_driver</depend>

  <exec_depend>twist_stamper</exec_depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>twist_mux</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
