<?xml version="1.0"?>
<package format="3">
  <name>mir_navigation</name>
  <version>1.1.3</version>
  <description>Launch and configuration files for move_base, localization etc. on the MiR robot.</description>

  <maintainer email="gianluca.galvagni@edu.unige.it">Gianluca Galvagni</maintainer>
  <author email="gianluca.galvagni@edu.unige.it">Gianluca Galvagni</author>

  <license>BSD</license>

  <depend>mir_driver</depend>
  <depend>rviz2</depend>
  <depend>navigation2</depend>
  <depend>slam_toolbox</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
