<?xml version="1.0"?>
<package format="3">
  <name>sdc21x0</name>
  <version>1.1.3</version>
  <description>Message definitions for the sdc21x0 motor controller</description>

  <maintainer email="gianluca.galvagni@edu.unige.it">Gianluca Galvagni</maintainer>
  <author email="gianluca.galvagni@edu.unige.it">Gianluca Galvagni</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
